@@ -74,7 +74,6 @@ public:
 			return parseCurrentNode();
 		}
 
-		_IRR_IMPLEMENT_MANAGED_MARSHALLING_BUGFIX;
 		return false;
 	}
 
